commit index final

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="logo"> Comenzando con la fotografia</div>
 
         <nav id="navbar">
-          <a href="../index.html" target="_blank">Inicio</a>
-          <a href="html/Paisajes.html" target="_blank">Paisajes</a>
+          <a id="actual" href="../index.html" target="_blank">Inicio</a>
+          <a href="html/Paisajes.html">Paisajes</a>
           <a href="html/Retratos.html" target="_blank">Retratos</a>
         </nav>
     </header>
@@ -52,6 +52,6 @@
         <p>Gonzalo Gutierrez</p>
         <p>&copy Derechos Reservados 2017</p></div>
     </footer>
-  
+
   </body>
 </html>
